# some_tools

./: KCP.tar.bz2  README.md
SVO_edgelet/svo_edgelet/: CMakeLists.txt
SVO_edgelet/svo_edgelet/include/svo/: feature_alignment.h  frame_handler_mono.h  global.h  matcher.h  reprojector.h
SVO_edgelet/svo_edgelet/src/: config.cpp  depth_filter.cpp  feature_alignment.cpp  feature_detection.cpp  five-point.cpp  frame.cpp  frame_handler_mono.cpp  initialization.cpp  map.cpp  matcher.cpp  pose_optimizer.cpp  reprojector.cpp  sparse_align.cpp
SVO_edgelet/svo_edgelet/test/: test_live_vo (copy).cpp  test_live_vo.cpp  vo_from_dir.cpp
TEST/: CMakeLists.txt  ae.hpp  bind.cpp  brightness.cpp  gain.cpp  lock.cpp  queue.cpp  readmp4.cpp  record.cpp  test_con.cpp  test_warp.cpp  v4l2.cpp
TEST_GAIN/: CMakeLists.txt  gain.cpp
catkin_udpimage/src/image_from_dir_publish/: CMakeLists.txt  package.xml
catkin_udpimage/src/image_from_dir_publish/src/: publish_image_from_dir.cpp
catkin_udpimage/src/imu_pub/: CMakeLists.txt  package.xml
catkin_udpimage/src/imu_pub/src/: camtest.cpp
catkin_udpimage/src/my_udp_image/: CMakeLists.txt  package.xml
catkin_udpimage/src/my_udp_image/src/: a.out  main.cc  playbag.cc  x.py  x1.txt  x2.txt
catkin_udpimage/src/my_udp_image/tmp/: do_logrotate  release-version
catkin_udpimage/src/my_udp_image/tmp/afc_dream/: afc_dream  airbee_fc_release.txt  mainapp.config  motor_cal  run_afc.sh  syncparam.sh
catkin_udpimage/src/showpath/: CMakeLists.txt  package.xml
catkin_udpimage/src/showpath/src/: showpath.cpp
(+36 files in other folders)
